@@ -1,4 +1,5 @@
 3.0.16
+ * Fix exception when dumping sstable with frozen collection of UUID (CASSANDRA-14199)
  * Close socket on error during connect on OutboundTcpConnection (CASSANDRA-9630)
  * Set encoding for javadoc generation (CASSANDRA-14154)
  * Fix index target computation for dense composite tables with dropped compact storage (CASSANDRA-14104)
